fix: wrong background-color for theme

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -270,6 +270,6 @@
 
 body {
   min-height: 100vh;
-  background-color: var(--primary-color-l-high);
+  background-color: var(--secondary-color-l-base);
   color: var(--secondary-color-l-lowest);
 }
